--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,65 +1,34 @@
-name: ci
-
-on:
-  push:
-    branches:
-      master
+name: push go app
+on: 
+  push: 
+    branches: 
+      - master
+jobs: 
+  build: 
+    runs-on: ubuntu-latest
+    
+    steps: 
+    - uses: actions/checkout@master
+    - name: setup go
+      uses: actions/setup-go@v3     
+      with: 
+        go-version: 1.19
+    - name: check go version
+      run: go version
+    - name: go mod init 
+      run: go mod init github.com/bobiesco/user
+    - name: go mod tidy
+      run: go mod tidy 
+    - name: go build
+      run: go build -o user
+    - name: remove go mod init
+      run: rm go.mod
       
-  pull_request:
-    branches:
-      master
-
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
-          path: go/src/github.com/microservices-demo/catalogue
-
-      - uses: actions/setup-go@v1
-        with:
-          go-version: ${{ env.GO_VERSION }}
-
-      - name: Setup PATH
-        run: echo "${GOPATH}/bin" >> $GITHUB_PATH
-
-      - name: Install dependencies
-        run: go get -u github.com/FiloSottile/gvt && gvt restore && go get -v github.com/mattn/goveralls
-
-      - name: Build
-        run: ./scripts/build.sh
-
-      - name: Unit Test
-        run: ./test/test.sh unit.py
-
-      - name: Test Docker Image
-        run: ./test/test.sh container.py
-
-      - name: Submit Coveralls
-        env:
-          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: goveralls -coverprofile=coverage.out -service=github
-
-      # Push to dockerhub
-      - name: Push catalogue to Docker Hub
-        uses: docker/build-push-action@v1
-        if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/master'
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASS }}
-          dockerfile: go/src/github.com/microservices-demo/catalogue/docker/catalogue/Dockerfile
-          path: go/src/github.com/microservices-demo/catalogue
-          repository: ${{ env.GROUP }}/${{ env.REPO }}
-          tag_with_ref: true
-          tag_with_sha: true
-
-      - name: Push catalogue-db to Docker Hub
-        uses: docker/build-push-action@v1
-        if: startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/master'
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASS }}
-          dockerfile: go/src/github.com/microservices-demo/catalogue/docker/catalogue-db/Dockerfile
-          path: go/src/github.com/microservices-demo/catalogue/docker/catalogue-db
-          repository: ${{ env.GROUP }}/${{ env.REPO }}
-          tag_with_ref: true
-          tag_with_sha: true
+    - name: Build and Push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+        image: bobiesco/user
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+      
