--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
       run: go mod tidy 
     - name: go build
       run: go build -o user
+    - name: go mod vendor
+      run: go mod vendor
     - name: remove go mod init
       run: rm go.mod
       
