--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     - name: go build
       run: go build -o user
     - name: go mod vendor
-      run: go mod vendor
+      run: -mod=readonly
     - name: remove go mod init
       run: rm go.mod
       
